--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=q2gen47hi68k1yrb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=o8ht36fz8grovxqv
-DB_USERNAME=d3b9nkemubwdavxg
-DB_PASSWORD=d85c6mdwwyjgqxnp
+DB_DATABASE=virtual_class
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
